# storesimul

./: .gitignore  .travis.yml  Doxyfile  LICENSE  Makefile.am  README.md  configure.ac  storesimul.pc  storesimul.pc.in
ci/: travis-script.sh
examples/: Makefile.am  dummy_simulation  dummy_simulation.c
include/storesimul/: storesimul.h
include/storesimul/internals/: accessimul.h  atomic.h
man/: Makefile.am  storesimul.1
src/: Makefile.am  README.md  storesimul.c
src/internals/: accessimul.c  atomic.c
